[package]
name = "asyncmigrate-cli"
version = "0.2.0"
authors = ["OKAMURA, Yasunobu <okamura@informationsea.info>"]
edition = "2018"
readme = "README.md"

description = "database migration with async support"
repository = "https://github.com/informationsea/asyncmigrate-rs"
homepage = "https://github.com/informationsea/asyncmigrate-rs"
keywords = ["database", "migration", "postgresql"]
categories = ["database"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
asyncmigrate = { version = "0.2", path = "../asyncmigrate-lib" }
clap = "2"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
thiserror = "1"
rpassword = "4"
rustyline = "6"
